--- a/css/navigation.css
+++ b/css/navigation.css
@@ -20,6 +20,10 @@ header{
 .main-menu.on{
     right: 0;
 }
+.main-menu li{
+    display: flex;
+    align-items: center;
+}
 .main-menu li a{
     color: white;
     text-decoration: none;
