--- a/css/form.css
+++ b/css/form.css
@@ -31,6 +31,16 @@
 }
 .edit-form input{
     margin: 10px 0px;
+    max-width: 180px;
+}
+.edit-form select{
+    width: 100%;
+    max-width: 180px;
+    padding: 10px;
+    margin: 5px 2px;
+    border-radius: 15px;
+    border: 2px solid purple;
+    accent-color: purple;
 }
 .standart-form input[type=checkbox]{
     padding: 0;
